*******************************************************************************
Version 1.6.9
*******************************************************************************

2010-11-01 Carl Benson <carl.benson(at)windriver.com>

	Fix for Android build.

	I had to do some modifications myself though, because the Android
	build system insists on having a file named "util.h" taking precedence
	in its include path, libupnp gets confused because of the same filename
	in upnp/src/inc/util.h

*******************************************************************************
Version 1.6.8
*******************************************************************************

2010-10-20 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>

	Fix a long date memory leak in webserver.c:StrStr().

2010-10-19 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>

	Bug fix in select of miniserver.c
	
	Fix a bug in miniserver.c, in which maxMiniSock was wrongly declared as
	unsigned int and as a result it was beeng set to ((unsigned int)(-1)).
	As a result, after beeing incremented, it became zero, and this value
	was beeing used in the select() call.

	Thanks to Fabrice Fontaine for helping and testing with this issue.

2010-10-15 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>

	Fix for 100% CPU issue in select() in miniserv.c. I have also removed
	the sleep() call, it was just a workaround.

	SF Bug Tracker [ 3086852 ] 99% CPU loop in miniserver.c on a non ipv6
	system.

	Submitted by: Jin ( jin_eld ) - 2010-10-13 19:29:13 UTC

	I cross compiled libupnp 1.6.7 for ARM9 using the --disable-ipv6
	option, my system is an ipv4 only setup.

	I do not know why this problem only appears when running the app in the
	background (for instance using nohup &), but then it starts using 99%
	CPU.

	I traced the problem down to the select() call in miniserver.c in the
	RunMiniServer() function. Select returns code 1, but errno is set to